--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../static/style.css"> 
 
     <title>
-      {% block title %}{% endblock %}
+      {% block title %}Catherapy{% endblock %}
     </title>
   
     {% block head %}
