--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,139 +6,6 @@
 
 {% block body %}
 {% if patient %}
-<style>
-body {
-  overflow: hidden;
-}
-  .btn-check:checked+.btn-outline-primary {
-    background-color: black;
-    border-color: black;
-    color: white;
-  }
-  .btn-check:checked + .btn-outline-primary i {
-  color: white;
-}
-
-.btn-outline-primary {
-  color: black;
-  border-color: black;
-}
-
-.btn-outline-primary:hover {
-  color: white;
-  background-color: black;
-  border-color: black;
-}
-
-.navbar-nav {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.btn-primary {
-  background-color: black;
-  border-color: black;
-  color: white;
-}
-
-.affirmation-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f1ebea;
-}
-
-.affirmation-text {
-  font-size: 36px;
-  text-align: center;
-  margin: 0;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: #ffffffe4;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.card {
-  border: 2px solid #eee;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  transition: box-shadow 0.3s ease-in-out;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-/* Style the form container */
-.form-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-  background-color: #f7f7f7;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px #d9d9d9;
-}
-
-/* Style the form heading */
-h1, h3 {
-  margin-bottom: 10px;
-  color: #2e2e2e;
-  font-weight: bold;
-  text-align: center;
-}
-
-.feelings-group .btn-check {
-  display: none;
-}
-
-.feelings-group .btn-outline-primary.btn-lg.active i {
-  font-size: 2rem;
-}
-
-.feelings-group .btn-outline-primary.btn-lg:not(.active) i {
-  font-size: 1.5rem;
-}
-
-.feelings-submit-btn {
-  margin-top: 20px;
-  background-color: black;
-  color: white;
-  font-weight: bold;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.feelings-submit-btn:hover {
-  background-color: white;
-  color: black;
-}
-.btn-outline-success {
-  color: rgb(0, 0, 0);
-  border-color: white;
-}
-
-.btn-outline-success:hover {
-  color: rgb(0, 0, 0);
-  background-color: rgb(0, 0, 0);
-  border-color: rgb(0, 0, 0);
-}  
-  
-</style>
-
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
@@ -167,10 +34,6 @@ h1, h3 {
     </div>
   </div>
 </nav>
-
-<div class="affirmation-container">
-  <p class="affirmation-text">{{ affirmation }}</p>
-</div>
 </br>
 <div class="text-center">
   {% if not has_patient_submitted_feeling_today %}
@@ -195,7 +58,7 @@ h1, h3 {
     </div>
   </form>
   {% else %}
-  <div class="alert alert-success" role="alert">
+  <div class="alert alert-success m-3" role="alert">
     <h4 class="alert-heading">Thank you for submitting your feeling for today!</h4>
     <p>We appreciate your input and hope you have a great day.</p>
   </div>
@@ -220,10 +83,10 @@ h1, h3 {
               <h5 class="card-title">Your next Pawsome appointment info</h5>
               <ul class="list-group">
                 <li class="list-group-item"><i class="fa-regular fa-calendar fa-fw me-4"></i>Date:
-                  {{appointment.datetime.strftime('%a %b %d')}} </li>
+                  {{appointment.datetime.strftime('%a %b %d')}}</li>
                 <li class="list-group-item"><i class="fa-regular fa-clock fa-fw me-4"></i>Time:
-                  {{appointment.datetime.strftime('%I:%M %p')}} </li>
-                <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-3"></i>Where:
+                  {{appointment.datetime.strftime('%I:%M %p')}}</li>
+                <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-4"></i>Where:
                   {{appointment.doctor.address}}</li>
                 <li class="list-group-item"><i class="fa-regular fa-user fa-fw me-4"></i>With:
                   {{appointment.doctor.first_name}} {{appointment.doctor.last_name}}</li>
@@ -244,16 +107,148 @@ h1, h3 {
 </div>
 {% endfor %}
 {% else %}
-<div id="schedule-btn" class="my-5">
+<div id="schedule-btn" class="text-center">
   <h1 class="mb-4">You have no upcoming appointments</h1>
   <button onclick="window.location.href='/search'" class="btn btn-primary">Schedule Appointment</button>
 </div>
 {% endif %}
 </div>
+<div class="affirmation-container">
+  <p class="affirmation-text">{{ affirmation }}</p>
+</div>
 </div>
 
 </div>
 {% endif %}
+<style>
+
+  body {
+    overflow: hidden;
+  }
+
+  .btn-check:checked+.btn-outline-primary {
+    background-color: black;
+    border-color: black;
+    color: white;
+  }
+
+  .btn-check:checked+.btn-outline-primary i {
+    color: white;
+  }
+
+  .btn-outline-primary {
+    color: black;
+    border-color: black;
+  }
+
+  .btn-outline-primary:hover {
+    color: white;
+    background-color: black;
+    border-color: black;
+  }
+
+  .navbar-nav {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .btn-primary {
+    background-color: black;
+    border-color: black;
+    color: white;
+  }
+
+  .affirmation-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .affirmation-text {
+    font-size: 36px;
+    text-align: center;
+    margin: 0;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #ffffffe4;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .card {
+    border: 2px solid #eee;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    transition: box-shadow 0.3s ease-in-out;
+  }
+
+  .card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
+
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    background-color: #f7f7f7;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #d9d9d9;
+  }
+
+ 
+  h1,
+  h3 {
+    margin-bottom: 10px;
+    color: #2e2e2e;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .feelings-group .btn-check {
+    display: none;
+  }
+
+  .feelings-group .btn-outline-primary.btn-lg.active i {
+    font-size: 2rem;
+  }
+
+  .feelings-group .btn-outline-primary.btn-lg:not(.active) i {
+    font-size: 1.5rem;
+  }
+
+  .feelings-submit-btn {
+    margin-top: 20px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+  }
+
+  .feelings-submit-btn:hover {
+    background-color: white;
+    color: black;
+  }
+
+  .btn-outline-success {
+    color: rgb(0, 0, 0);
+    border-color: white;
+  }
+
+  .btn-outline-success:hover {
+    color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0);
+    border-color: rgb(0, 0, 0);
+  }
+</style>
 <script>
   document.getElementById('schedule-btn').addEventListener('click', function () {
     window.location.href = '/search';
