app ready for demo night - last commit

--- a/templates/doctor-registration.html
+++ b/templates/doctor-registration.html
@@ -77,5 +77,11 @@ in messages %} {{ message }} {% endfor %} {% endif %} {% endwith %}
     background-color: black;
     border-color: black;
   }
+  body {
+    background-image: url('../static/img/uyellow.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
 </style>
 {% endblock %}
