--- a/templates/update-doctor-profile.html
+++ b/templates/update-doctor-profile.html
@@ -148,7 +148,9 @@
     margin-left: 10px;
   }
 
-
+  .navbar-dark .navbar-nav .nav-link {
+  color: white;
+}
 
   .card input[type="checkbox"]+label {
     border: 1px solid #fcf9f9;
@@ -163,6 +165,11 @@
     background-color: #000000;
     color: #fff;
     border-color: #000000;
+  }
+  body {
+    background-image: url('../static/img/uyellow.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 </style>
 {% endblock %}
