--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 </br>
-<div class="text-center">
+<div class="text-center p-3 m-3">
   {% if not has_patient_submitted_feeling_today %}
   <h1>Welcome {{patient.first_name}}</h1>
   <h3>How are you feeling today?</h3>
@@ -58,200 +58,249 @@
     </div>
   </form>
   {% else %}
-  <div class="alert alert-success m-3" role="alert">
-    <h4 class="alert-heading">Thank you for submitting your feeling for today!</h4>
-    <p>We appreciate your input and hope you have a great day.</p>
-  </div>
-  {% endif %}
+</div>
+<div class="alert alert-success m-3" role="alert">
+  <div class="text-center">
+  <h4 class="alert-heading">Thank you for submitting your feeling for today!</h4>
+  <p>We hope you have a great day.</p>
+</div>
 </div>
 
-<div class="ms-3">
-  <div id="patient-appt">
+{% endif %}
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="ms-3">
+      <div id="patient-appt">
+      </br>
+    </br>
+
+        {% if patient.appointments %}
+        <video autoplay muted loop id="myVideo">
+          <source src="../static/img/uhapppy1.mp4" type="video/mp4">
+        </video>
+        {% for appointment in patient.appointments %}
 
 
-    {% if patient.appointments %}
-    {% for appointment in patient.appointments %}
-
-    <form action="/patient-delete-appointment" method="POST">
-      <div class="card mb-3" style="max-width: 600px;">
-        <div class="row no-gutters">
-          <div class="col-md-4 my-auto">
-            <img src="{{appointment.doctor.photo_url}}" class="card-img ms-2" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Your next Pawsome appointment info</h5>
-              <ul class="list-group">
-                <li class="list-group-item"><i class="fa-regular fa-calendar fa-fw me-4"></i>Date:
-                  {{appointment.datetime.strftime('%a %b %d')}}</li>
-                <li class="list-group-item"><i class="fa-regular fa-clock fa-fw me-4"></i>Time:
-                  {{appointment.datetime.strftime('%I:%M %p')}}</li>
-                <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-4"></i>Where:
-                  {{appointment.doctor.address}}</li>
-                <li class="list-group-item"><i class="fa-regular fa-user fa-fw me-4"></i>With:
-                  {{appointment.doctor.first_name}} {{appointment.doctor.last_name}}</li>
-              </ul>
-              <button type="submit" class="btn btn-primary mt-2"
-                style="background-color :hsla(0, 11%, 7%, 0.992);">Cancel
-                Appointment</button>
+        <form action="/patient-delete-appointment" method="POST">
+          <div class="card mb-3" style="max-width: 600px;">
+            <div class="row no-gutters">
+              <div class="col-md-4 my-auto">
+                <img src="{{appointment.doctor.photo_url}}" class="card-img ms-2" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Your next Pawsome appointment info</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item"><i class="fa-regular fa-calendar fa-fw me-4"></i>Date:
+                      {{appointment.datetime.strftime('%a %b %d')}}</li>
+                    <li class="list-group-item"><i class="fa-regular fa-clock fa-fw me-4"></i>Time:
+                      {{appointment.datetime.strftime('%I:%M %p')}}</li>
+                    <li class="list-group-item"><i class="fa-solid fa-map-pin fa-fw me-4"></i>Where:
+                      {{appointment.doctor.address}}</li>
+                    <li class="list-group-item"><i class="fa-regular fa-user fa-fw me-4"></i>With:
+                      {{appointment.doctor.first_name}} {{appointment.doctor.last_name}}</li>
+                  </ul>
+                  <button type="submit" class="btn btn-primary mt-2"
+                    style="background-color :hsla(0, 11%, 7%, 0.992);">Cancel
+                    Appointment</button>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
       </div>
+    </div>
+    <input type="hidden" name="doctor_id" value="{{appointment.doctor.doctor_id}}">
+    <input type="hidden" name="selected_datetime" value="{{appointment.datetime}}">
+    </form>
   </div>
-  <input type="hidden" name="doctor_id" value="{{appointment.doctor.doctor_id}}">
-  <input type="hidden" name="selected_datetime" value="{{appointment.datetime}}">
 
+  {% endfor %}
+ </div>
 
-  </form>
-</div>
-{% endfor %}
-{% else %}
-<div id="schedule-btn" class="text-center">
-  <h1 class="mb-4">You have no upcoming appointments</h1>
-  <button onclick="window.location.href='/search'" class="btn btn-primary">Schedule Appointment</button>
-</div>
+ {% else %}
+</br>
+</br>
+</br>
+</br>
+<video autoplay muted loop id="myVideo">
+  <source src="../static/img/uhome.mp4" type="video/mp4">
+</video>
+ <div class="row">
+  <div class="col-md-6 d-flex justify-content-center align-items-center">
+       <div class="schedule-container text-center">
+         <div id="schedule-btn">
+           <h1>You have no upcoming appointments</h1>
+           <button onclick="window.location.href='/search'" class="btn btn-primary">Find a Doctor</button>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
 {% endif %}
-</div>
-<div class="affirmation-container">
-  <p class="affirmation-text">{{ affirmation }}</p>
-</div>
-</div>
-
-</div>
-{% endif %}
-<style>
-
-  body {
-    overflow: hidden;
-  }
-
-  .btn-check:checked+.btn-outline-primary {
-    background-color: black;
-    border-color: black;
-    color: white;
-  }
-
-  .btn-check:checked+.btn-outline-primary i {
-    color: white;
-  }
-
-  .btn-outline-primary {
-    color: black;
-    border-color: black;
-  }
-
-  .btn-outline-primary:hover {
-    color: white;
-    background-color: black;
-    border-color: black;
-  }
-
-  .navbar-nav {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .btn-primary {
-    background-color: black;
-    border-color: black;
-    color: white;
-  }
-
-  .affirmation-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .affirmation-text {
-    font-size: 36px;
-    text-align: center;
-    margin: 0;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #ffffffe4;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  }
-
-  .card {
-    border: 2px solid #eee;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    transition: box-shadow 0.3s ease-in-out;
-  }
-
-  .card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  }
-
-  .form-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-    background-color: #f7f7f7;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #d9d9d9;
-  }
-
  
-  h1,
-  h3 {
-    margin-bottom: 10px;
-    color: #2e2e2e;
-    font-weight: bold;
-    text-align: center;
-  }
+  {% endif %}
 
-  .feelings-group .btn-check {
-    display: none;
-  }
+  <style>
+body {
+  background-size: cover;
+  overflow-x: hidden;
+}
 
-  .feelings-group .btn-outline-primary.btn-lg.active i {
-    font-size: 2rem;
-  }
+#myVideo {
+  position: fixed;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1;
+}
+    .btn-check:checked+.btn-outline-primary {
+      background-color: black;
+      border-color: black;
+      color: white;
+    }
 
-  .feelings-group .btn-outline-primary.btn-lg:not(.active) i {
-    font-size: 1.5rem;
-  }
+    .btn-check:checked+.btn-outline-primary i {
+      color: white;
+    }
 
-  .feelings-submit-btn {
-    margin-top: 20px;
-    background-color: black;
-    color: white;
-    font-weight: bold;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  }
+    .btn-outline-primary {
+      color: black;
+      border-color: black;
+    }
 
-  .feelings-submit-btn:hover {
-    background-color: white;
-    color: black;
-  }
+    .btn-outline-primary:hover {
+      color: white;
+      background-color: black;
+      border-color: black;
+    }
 
-  .btn-outline-success {
-    color: rgb(0, 0, 0);
-    border-color: white;
-  }
+    .navbar-nav {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+  
+    }
 
-  .btn-outline-success:hover {
-    color: rgb(0, 0, 0);
-    background-color: rgb(0, 0, 0);
-    border-color: rgb(0, 0, 0);
-  }
-</style>
-<script>
-  document.getElementById('schedule-btn').addEventListener('click', function () {
-    window.location.href = '/search';
-  });
-</script>
-{% endblock %}
+    .navbar-dark .navbar-nav .nav-link {
+      color: white;
+    }
+
+    .btn-primary {
+      background-color: black;
+      border-color: black;
+      color: white;
+    }
+
+    .affirmation-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: -10px;
+    }
+
+    .schedule-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 36px;
+      text-align: center;
+      margin: 0;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: #ffffffe4;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .affirmation-text {
+      font-size: 36px;
+      text-align: center;
+      margin: 0;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: #ffffffe4;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .card {
+      border: 2px solid rgb(255, 255, 255);
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      padding: 10px;
+      transition: box-shadow 0.3s ease-in-out;
+    }
+
+    .card:hover {
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .form-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 20px;
+      background-color: #f7f7f7;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px #d9d9d9;
+    }
+
+
+    h1,
+    h3 {
+      margin-bottom: 10px;
+      color: #2e2e2e;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .feelings-group .btn-check {
+      display: none;
+    }
+
+    .feelings-group .btn-outline-primary.btn-lg.active i {
+      font-size: 2rem;
+    }
+
+    .feelings-group .btn-outline-primary.btn-lg:not(.active) i {
+      font-size: 1.5rem;
+    }
+
+    .feelings-submit-btn {
+      margin-top: 20px;
+      background-color: black;
+      color: white;
+      font-weight: bold;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
+    }
+
+    .feelings-submit-btn:hover {
+      background-color: rgb(45, 94, 239);
+      color: rgb(255, 255, 255);
+    }
+
+    .btn-outline-success {
+      color: rgb(0, 0, 0);
+      border-color: white;
+    }
+
+    .btn-outline-success:hover {
+      color: rgb(0, 0, 0);
+      background-color: rgb(0, 0, 0);
+      border-color: rgb(0, 0, 0);
+    }
+  </style>
+  <script>
+    document.getElementById('schedule-btn').addEventListener('click', function () {
+      window.location.href = '/search';
+    });
+  </script>
+  {% endblock %}
