--- a/templates/patient-registration.html
+++ b/templates/patient-registration.html
@@ -56,5 +56,11 @@
     background-color: black;
     border-color: black;
 }
+body {
+    background-image: url('../static/img/uyellow.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
 </style>
 {% endblock %}
